Add SVG seat map to reservation confirmation email; enhance seat rendering logic and update email template